[package]
name = "rsa-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
der = "0.7.6"
pkcs1 = { version = "0.7.5", features = ["alloc"] }
rand = "0.8.5"
rsa = { version = "0.9.2", features = ["sha2"] }
rsa-der = "0.3.0"
x509-cert = { version = "0.2.3", features = ["builder"] }
